--- a/0. prenotes.md
+++ b/0. prenotes.md
@@ -7,8 +7,8 @@
 - 
 - 
 #SlideNote3 | 탄소시장 개요 (2/2) (Carbon Market Overview 2/2)
-- 
-- 
+- 대표적인 예로 상응 조정 일 요구 하는 기업이 증가하고 있는데 상 조정란 자발적 단소 시장을 외도 제도 시장에서 공급 된 크레딧이 가능성을 높으며 이것을 기업이 자발적 목표의 사용할 경우 이 전체를 과연 자발적 탄소 시장이라고 불러야 할지 규제 시장이라고 불러야 할지 불명확. 
+- 또 다른 예로 태생은 자발적 시장인데 최종 소비 지는 남아공이나 콜롬비아의 탄소세 시장에서 소비 될 경우 이것을 제도 시장이라고 불러야 할지 자발적 시장이라고 불러야 할지 불명확
 - 
 #SlideNote4 | 2025년 글로벌 기업 상쇄 규모순위 (2025 Global Corporate Offset Rankings)
 - 
@@ -19,8 +19,8 @@
 - 
 - 
 #SlideNote6 | CDP 질문 변경으로 본 마켓 트렌드 1: 용어의 규격화 (CDP Question Changes & Market Trends 1: Terminology Standardization)
-- 
-- 
+- CDM(UNFCCC)는 예전부터 VCM은 인정하지 않은 위주였음. 허나 현재 제도시장 & 자발적 탄소시장 경계가 허물어지면서 양쪽에서 동일한 것을 지칭하는 용어들이 혼용되면서 용어의 규격화가 이뤄지거나 또는 그 노력이 이뤄지는 중
+- retirement vs cancel 설명. ICVCM 탄소크레딧의 발급과정에서 갖춰야할 자격 조건
 - 
 #SlideNote7 | Cancellation 예시 (Cancellation Examples)
 - 
